MacViews: Explicitly stitch together content and views a11y hierarchies

Also fixes assumption in AXPlatformNodeCocoa that all children are
also AXPlatformNodeCocoa

Bug: 861756, 833638
Change-Id: I3fbf05858b00f8a8ee06d8c5d0af988252ca26a8
Reviewed-on: https://chromium-review.googlesource.com/1138793
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576479}
Former-commit-id: 5779245ee8c0476167fea8733b23102d5b280c4d